--- a/installer/bin/install
+++ b/installer/bin/install
@@ -8,14 +8,15 @@ cd "$(dirname "${BASH_SOURCE[0]}")"
 # we source remotely.
 #
 # shellcheck source=devos.static
-source <(curl -s "https://raw.githubusercontent.com/InterBolt/devos/main/installer/bin/devos.static")
-iINSTALL_DIR_EXISTED=false
-if [ -d "$vSTATIC_MY_CONFIG_ROOT" ]; then
-  iINSTALL_DIR_EXISTED=true
-fi
+source <(curl -H 'Cache-Control: no-cache' -s "https://raw.githubusercontent.com/InterBolt/devos/main/installer/bin/devos.static")
+# iINSTALL_DIR_EXISTED=false
+# if [ -d "$vSTATIC_MY_CONFIG_ROOT" ]; then
+#   iINSTALL_DIR_EXISTED=true
+# fi
+echo "$vSTATIC_MY_CONFIG_ROOT"
 mkdir -p "$vSTATIC_MY_CONFIG_ROOT"
 # shellcheck source=shared.log.sh
-source <(curl -s "https://raw.githubusercontent.com/InterBolt/devos/main/installer/bin/shared.log.sh")
+source <(curl -H 'Cache-Control: no-cache' -s "https://raw.githubusercontent.com/InterBolt/devos/main/installer/bin/shared.log.sh")
 log.ready "installer"
 #
 # Will download the bin script + all lib scripts to the user's local
