--- a/installer/bin/install
+++ b/installer/bin/install
@@ -38,6 +38,9 @@ mkdir -p "$vSTATIC_MY_CONFIG_ROOT"
 # shellcheck source=shared.log.sh
 source "shared.log.sh"
 log.ready "installer"
+
+log.info "installing devos..."
+log.debug "source bin scripts from: $iPATH_TO_SOURCE_BIN_SCRIPTS"
 #
 # Will download the bin script + all lib scripts to the user's local
 # devos config folder at config/bin/.
