--- a/install
+++ b/install
@@ -28,15 +28,15 @@ cd "$viTMP_CLONED_DIR"
 # Source anything we need an make sure the user has a
 # config dir in the home folder.
 #
-# shellcheck source=bin/__shared__/static.sh
-. "bin/__shared__/static.sh"
+# shellcheck source=bin/shared/static.sh
+. "bin/shared/static.sh"
 viINSTALL_DIR_EXISTED=false
 if [ -d "$vSTATIC_MY_CONFIG_ROOT" ]; then
   viINSTALL_DIR_EXISTED=true
 fi
 mkdir -p "$vSTATIC_MY_CONFIG_ROOT"
-# shellcheck source=bin/__shared__/log.sh
-. "bin/__shared__/log.sh"
+# shellcheck source=bin/shared/log.sh
+. "bin/shared/log.sh"
 log.ready "installer" "${vSTATIC_MY_CONFIG_ROOT}/${vSTATIC_LOGS_DIRNAME}"
 log.info "installing solos..."
 #
