--- a/install
+++ b/install
@@ -73,6 +73,5 @@ fi
   echo "\"${vSTATIC_MY_CONFIG_ROOT:?}/$viREPO_BIN_EXECUTABLE_PATH\" \"\$@\""
 } >>"$viUSR_LOCAL_BIN_EXECUTABLE"
 chmod +x "$viUSR_LOCAL_BIN_EXECUTABLE"
-log.info "success: solos installed"
-log.info "at: ${vSTATIC_MY_CONFIG_ROOT:?}/$viREPO_BIN_EXECUTABLE_PATH"
+log.info "success: solos installed at: ${vSTATIC_MY_CONFIG_ROOT:?}/$viREPO_BIN_EXECUTABLE_PATH"
 log.info "run 'solos --help' to get started."
